# FlashFIX

./: .gitignore  404.html  CMakeLists.txt  CTestTestfile.cmake  LICENSE  LICENSE.md  README.md  benchmark_serialize.csv  benchmark_shared  index.html  mkdocs.yml  search.html  test_shared  test_static
api-reference/data-structures/: index.html
api-reference/deserialization/: index.html
api-reference/overview/: index.html
api-reference/serialization/: index.html
assets/javascripts/: bundle.f1b6f286.min.js
assets/javascripts/lunr/: tinyseg.js  wordcut.js
assets/javascripts/lunr/min/: lunr.ar.min.js  lunr.da.min.js  lunr.de.min.js  lunr.du.min.js  lunr.el.min.js  lunr.es.min.js  lunr.fi.min.js  lunr.fr.min.js  lunr.he.min.js  lunr.hi.min.js  lunr.hu.min.js  lunr.hy.min.js  lunr.it.min.js  lunr.ja.min.js  lunr.jp.min.js  lunr.kn.min.js  lunr.ko.min.js  lunr.multi.min.js  lunr.nl.min.js  lunr.no.min.js  lunr.pt.min.js  lunr.ro.min.js  lunr.ru.min.js  lunr.sa.min.js  lunr.stemmer.support.min.js  lunr.sv.min.js  lunr.ta.min.js  lunr.te.min.js  lunr.th.min.js  lunr.tr.min.js  lunr.vi.min.js  lunr.zh.min.js
assets/javascripts/workers/: search.f8cc74c7.min.js
benchmarks/: benchmark.c  plot_csv.py
building-and-testing/benchmarks/: index.html
building-and-testing/installation/: index.html
docs/: examples.md  index.md
docs/api-reference/: data-structures.md  deserialization.md  overview.md  serialization.md
docs/building-and-testing/: benchmarks.md  installation.md
examples/: index.html
include/: deserializer.h  flashfix.h  serializer.h  structs.h
include/flashfix/: deserializer.h  errors.h  serializer.h  structs.h
js/: html5shiv.min.js  jquery-3.6.0.min.js  theme.js  theme_extra.js
search/: lunr.js  main.js  search_index.json  worker.js
site/: 404.html
site/api-reference/deserialization/: index.html
site/api-reference/overview/: index.html
site/assets/javascripts/: bundle.f1b6f286.min.js
site/assets/javascripts/lunr/: tinyseg.js  wordcut.js
site/assets/javascripts/lunr/min/: lunr.ar.min.js  lunr.da.min.js  lunr.de.min.js  lunr.du.min.js  lunr.el.min.js  lunr.es.min.js  lunr.fi.min.js  lunr.fr.min.js  lunr.he.min.js  lunr.hi.min.js  lunr.hu.min.js  lunr.hy.min.js  lunr.it.min.js  lunr.ja.min.js  lunr.jp.min.js  lunr.kn.min.js  lunr.ko.min.js  lunr.multi.min.js  lunr.nl.min.js  lunr.no.min.js  lunr.pt.min.js  lunr.ro.min.js  lunr.ru.min.js  lunr.sa.min.js  lunr.stemmer.support.min.js  lunr.sv.min.js  lunr.ta.min.js  lunr.te.min.js  lunr.th.min.js  lunr.tr.min.js  lunr.vi.min.js  lunr.zh.min.js
site/assets/javascripts/workers/: search.f8cc74c7.min.js
site/building-and-testing/benchmarks/: index.html
site/examples/: index.html
src/: common.c  common.h  deserializer.c  errors.c  extensions.h  serializer.c  tags.h
src/internal/: common.c  common.h  errors.h  extensions.h  structs.h  tags.h
tests/: benchmark.c  plot_csv.py  test.c
